2014-04-27  Roland Winkler  <winkler@gnu.org>
	* configure.ac: Increase BBDB version number to 3.1.2.
	* NEWS: Update for release.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	Be more careful that empty strings do not pollute the data base.
	* lisp/bbdb.el (bbdb-list-strings): New function.
	(bbdb-record-set-field): Use it.
	(bbdb-record-set-xfield): Clean up.
	* lisp/bbdb-com.el (bbdb-fix-records): New command.
	(bbdb-read-organization, bbdb-complete-mail): Check emacs version
	properly.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	Check type of record data structures more carefully.
	* lisp/bbdb.el (bbdb-check-type): Simplify.  New arg `extended'.
	* lisp/bbdb-com.el (bbdb-create-internal): Bug fix.

2014-04-12  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* lisp/Makefile.am: Include makefile-temp in distribution.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-site.el.in: Be more verbose about what we want.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	* lisp/makefile-temp: Obey proper dependencies.  Clean up.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-vm.el, m4/emacs_vm.m4: Require vm-autoloads.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-separator-alist): Treat AKAs consistent with
	other fields.

2014-03-11  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	Generate lisp/bbdb-site.el via lisp/Makefile as pkgdatadir is only
	known at "make" time.
	* configure.ac: Remove lisp/bbdb-site.el from autoconfig files.
	Increase BBDB version number to 3.1.1
	* lisp/Makefile.am: Generate lisp/bbdb-site.el.
	* lisp/bbdb-site.el.in: Initialize bbdb-print-tex-path with a
	placeholder for pkgdatadir.

2014-03-11  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* Makefile.am: Install files COPYING, ChangeLog, AUTHORS, NEWS,
	README, and TODO in the doc directory.
	* doc/Makefile.am: Install bbdb.pdf in the doc directory.

2014-03-11  Barak A. Pearlmutter  <barak@cs.nuim.ie>